# hookneedle

./: .env  .gitignore  LICENSE  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
app/: __init__.py  auth.py  dash.py  db.py  helpers.py  project.py  schema.sql  user.py
app/static/: style.css
app/static/css/: output-style.css  style.css
app/templates/: 404.html  500.html  base.html
app/templates/auth/: login.html  register.html
app/templates/dash/: create.html  edit.html  index.html  members.html  project.html
app/templates/project/: create.html  edit.html  plan.html  project.html
app/templates/user/: edit.html  friends.html  profile.html
