[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "app"
authors = [{name = "Emma Grey", email = "emgrey02@gmail.com"}]
license = "MIT"
readme = "README.MD"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/emgrey02/hookneedle"
Issues = "https://github.com/emgrey02/hookneedle/issues"

[tools.setuptools]
packages = ["app"]

[tool.hatch.version]
path = "app/__init__.py"